// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders 1`] = `
<form>
  <fieldset>
    <input
      name="name"
      value=""
    />
    <input
      name="email"
      value="alan@gmail.com"
    />
    <span
      class="error"
    >
      This is an existing email
    </span>
    <input
      name="address.street"
      value=""
    />
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 2`] = `
<form>
  <fieldset>
    <input
      name="name"
      value=""
    />
    <span
      class="error"
    >
      Name is required
    </span>
    <input
      name="email"
      value=""
    />
    <span
      class="error"
    >
      Email is required
    </span>
    <input
      name="address.street"
      value=""
    />
    <span
      class="error"
    >
      Street is required
    </span>
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 3`] = `
<form>
  <fieldset>
    <input
      name="name"
      value=""
    />
    <span
      class="error"
    >
      This is a name error
    </span>
    <input
      name="email"
      value=""
    />
    <input
      name="address.street"
      value=""
    />
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 4`] = `
<form>
  <fieldset>
    <input
      name="name"
      value=""
    />
    <span
      class="error"
    >
      just name is required
    </span>
    <input
      value="alan@gmail.com"
    />
    <input
      name="address.street"
      value=""
    />
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 5`] = `
<form>
  <fieldset>
    <input
      name="name"
      value="default name"
    />
    <input
      value="alan@gmail.com"
    />
    <input
      name="address.street"
      value=""
    />
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 6`] = `
<form>
  <fieldset>
    <input
      name="name"
      value=""
    />
    <input
      value=""
      name="email"
    />
    <span
      class="error"
    >
      This is an existing email
    </span>
    <input
      name="address.street"
      value=""
    />
    <input
      name="optional.field"
      value=""
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 7`] = `
<form>
  <fieldset>
    <input
      name="name"
      value="test"
    />
    <input
      value="test@gmail.com"
      name="email"
    />
    <input
      name="address.street"
      value="test"
    />
    <input
      name="optional.field"
      value="test"
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;

exports[`Form renders 8`] = `
<form>
  <fieldset>
    <input
      name="name"
      value="test_default"
    />
    <input
      value="test@default.com"
      name="email"
    />
    <input
      name="address.street"
      value="test"
    />
    <input
      name="optional.field"
      value="test"
    />
    <button
      type="submit"
    >
      Add
    </button>
    <button
      type="button"
    >
      Set Default
    </button>
  </fieldset>
</form>
`;
